0033055: Data Exchange, RWPly_Provider - remove dependency from BRepLib_PointCloudShape

Removing PointCloud writing feature from the RWPly_Provider class.
Getting rid of Pointcloud-related parameters in the RWPly_ConfigurationNode.